--- a/styles/style.css
+++ b/styles/style.css
@@ -1,47 +1,250 @@
-    /**** R E S E T  start****/
+/**** R E S E T  start****/
 *:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
-all: unset;
-display: revert;
+  all: unset;
+  display: revert;
 }
 *,
 *::before,
 *::after {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
-a, button {
-cursor: revert;
+a,
+button {
+  cursor: revert;
 }
-ol, ul, menu {
-list-style: none;
+ol,
+ul,
+menu {
+  list-style: none;
 }
 img {
-max-width: 100%;
+  max-width: 100%;
 }
 table {
-border-collapse: collapse;
+  border-collapse: collapse;
 }
 textarea {
-white-space: revert;
+  white-space: revert;
 }
 meter {
--webkit-appearance: revert;
-appearance: revert;
+  -webkit-appearance: revert;
+  appearance: revert;
 }
 ::placeholder {
-color: unset;
+  color: unset;
 }
 :where([hidden]) {
-display: none;
+  display: none;
 }
 :where([contenteditable]) {
--moz-user-modify: read-write;
--webkit-user-modify: read-write;
-overflow-wrap: break-word;
--webkit-line-break: after-white-space;
+  -moz-user-modify: read-write;
+  -webkit-user-modify: read-write;
+  overflow-wrap: break-word;
+  -webkit-line-break: after-white-space;
 }
-:where([draggable=
-true
-]) {
--webkit-user-drag: element;
+:where([draggable="true"]) {
+  -webkit-user-drag: element;
 }
-    /**** R E S E T  end****/
+/**** R E S E T  end****/
+
+/* 
+    ## Colors
+
+### Primary
+
+- Pink: hsl(322, 100%, 66%)
+
+### Neutral
+
+- Very Pale Cyan: hsl(193, 100%, 96%)
+- Very Dark Cyan: hsl(192, 100%, 9%)
+- Grayish Blue: hsl(208, 11%, 55%)
+*/
+
+/* ### Headings
+
+- Family: [Poppins](https://fonts.google.com/specimen/Poppins)
+- Weights: 600
+font-family: 'Poppins', sans-serif;
+
+### Body, Call-to-actions
+
+- Family: [Open Sans](https://fonts.google.com/specimen/Open+Sans)
+- Weights: 400, 700 
+font-family: 'Open Sans', sans-serif;
+*/
+
+body {
+  font-size: 1.125rem;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  min-width: 23.4375rem;
+}
+.container {
+}
+header {
+  background-image: url(../images/bg-hero-mobile.svg);
+  background-color: hsl(193, 100%, 96%);
+  padding: 1rem;
+}
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+.main-logo {
+  width: 7.8125rem;
+}
+nav ul li a {
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 1.5rem;
+  padding: 0.5rem 2rem;
+  font-size: 0.8rem;
+  font-weight: 700;
+  box-shadow: 0px 10px 28px 0px rgba(0, 0, 0, 0.1);
+  color: hsl(255, 0%, 0%, 0.8);
+}
+header,
+main {
+  text-align: center;
+}
+.intro {
+  padding: 5rem 0rem;
+}
+.intro h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.8rem;
+  font-weight: 600;
+  margin: 0rem 2rem;
+}
+.intro p {
+  color: hsl(255, 0%, 0%, 0.9);
+  margin: 1.5rem 2.375rem 3rem 2.375rem;
+  line-height: 1.5;
+}
+.intro a {
+  background-color: hsl(322, 100%, 66%);
+  color: hsl(0, 0%, 100%);
+  padding: 1rem 5rem;
+  border-radius: 1.5rem;
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+.main-img {
+  margin: 0rem 2rem 1rem 2rem;
+}
+
+/******** HEADER END **********/
+
+main {
+  padding: 1rem;
+}
+.card {
+  padding: 3.125rem;
+  border-radius: 1rem;
+  margin: 3.5rem 0rem;
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.1);
+}
+h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.6rem;
+  font-weight: 600;
+  margin-top: 4rem;
+  margin-bottom: 1rem;
+}
+p {
+  color: hsl(208, 11%, 55%, 0.9);
+  font-size: 1.125rem;
+  line-height: 1.5;
+}
+.your-user{
+    margin-bottom: 15rem;
+}
+
+/**** MAIN CONTENT END ****/
+
+.ready {
+  border-radius: 1rem;
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(255, 0%, 0%, 0.8);
+  text-align: center;
+  padding: 3rem 0rem 4rem 0rem;
+  box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.1);
+  position: relative;
+  bottom: 9rem;
+
+}
+.ready h3 {
+  font-size: 1.3rem;
+  margin-top: 0rem;
+  margin-bottom: 2.5rem;
+}
+.ready a {
+  background-color: hsl(322, 100%, 66%);
+  color: hsl(0, 0%, 100%);
+  padding: 1rem 5rem;
+  border-radius: 1.5rem;
+  font-weight: 700;
+  font-size: 0.9rem;
+  box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+footer {
+  background-color: hsl(192, 100%, 9%);
+  color: hsl(0, 0%, 100%);
+  padding: 1rem;
+}
+.contact{
+    margin-top: -3rem;
+}
+.logo-footer {
+  filter: brightness(0) invert(1);
+  width: 12.5rem;
+}
+.contact ul li {
+  display: grid;
+  grid-template-columns: 48px 1fr;
+  margin: 1.5rem 0rem;
+}
+li p {
+  color: hsl(0, 0%, 100%);
+  font-size: 1.25rem;
+}
+li img {
+  margin-top: 0.5rem;
+}
+.info-container {
+  margin: 4.375rem 0rem;
+}
+.info li {
+  margin: 1.5rem 0rem;
+}
+.info li p {
+  font-size: 1.25rem;
+}
+/**** info contact end ****/
+
+.socials ul {
+  display: flex;
+  justify-content: center;
+}
+.socials ul li {
+  width: 2.375rem;
+  height: 2.375rem;
+  border: 1px solid hsl(0, 0%, 100%);
+  border-radius: 50%;
+  margin: 0rem 0.5rem;
+  display: grid;
+  place-items: center;
+}
+.socials ul li svg {
+  width: 18px;
+  height: 18px;
+  fill: hsl(0, 0%, 100%);
+}
+footer > p {
+  color: hsl(0, 0%, 100%);
+  margin: 2rem;
+  font-size: 0.8rem;
+  text-align: center;
+}
